--- a/style.css
+++ b/style.css
@@ -251,10 +251,14 @@ h2{
     display: inline-block;
   
 }
-.Sneak img{
+ .Sneak img{
     
-    margin: 20px 0px 20px 0px;
+    
+    width: 750px;
+    height: 450px;
+    display: inline-block;
 }
+
 
 #timer{
     font-size: 50px;
